# ai-browser

./: .gitignore  pyproject.toml  searchpage2table.py  webサイト構造化.ipynb
core/: searchedpage2json.py
experiments/colab/: webサイト構造化.ipynb
