[tool.poetry]
name = "ai-browser"
version = "0.1.0"
description = ""
authors = ["murawakimitsuhiro <mitsuhiromurawaki@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_browser"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.253"
unstructured = "^0.9.0"
playwright = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
